syntax = "proto3";
package contracts;

option csharp_namespace = "Microsoft.LocalForwarder.Library.Inputs.Contracts";
option java_package = "com.microsoft.localforwarder.library.inputs.contracts";
option java_multiple_files = true;

enum DataPointType
{
	Measurement = 0;
	Aggregation = 1;
}