syntax = "proto3";
package contracts;

option csharp_namespace = "Microsoft.LocalForwarder.Library.Inputs.Contracts";
option java_package = "com.microsoft.localforwarder.library.inputs.contracts";
option java_multiple_files = true;

enum SeverityLevel
{
	Unknown = 0;
	Verbose = 1;
	Information = 2;
	Warning = 3;
	Error = 4;
	Critical = 5;
}